<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="@drawable/blurredpage"
                                             tools:context="com.example.konnekt.registerlogin.RegisterActivity">


    <Button
            android:id="@+id/selectphoto"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/select_button_round_design"
            android:contentDescription="@string/todo"
            android:text="@string/select_photo"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/imagelogo" android:layout_alignParentLeft="true" android:layout_marginTop="16dp"/>

    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/selectphotocircleView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:layout_constraintBottom_toBottomOf="@+id/selectphoto"
            app:layout_constraintEnd_toEndOf="@+id/selectphoto"
            app:layout_constraintStart_toStartOf="@+id/selectphoto"/>

    <EditText
            android:id="@+id/signupfirstName"
            android:layout_width="292dp"
            android:layout_height="32dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:background="@drawable/textviewborder"
            android:drawableStart="@drawable/ic_action_user"
            android:ems="10"
            android:hint="@string/firstName"
            android:textColorLink="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/selectphoto" android:layout_marginLeft="8dp"
            android:drawableLeft="@drawable/ic_action_user" android:inputType="textPersonName"/>

    <EditText
            android:id="@+id/signuplastName"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:background="@drawable/textviewborder"
            android:drawableStart="@drawable/ic_action_user"
            android:ems="10"
            android:hint="@string/lastName"
            android:textColorLink="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/signupfirstName"
            app:layout_constraintStart_toStartOf="@+id/signupfirstName"
            app:layout_constraintTop_toBottomOf="@+id/signupfirstName" android:drawableLeft="@drawable/ic_action_user"
            android:inputType="textPersonName"/>

    <EditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="12dp"
            android:autofillHints=""
            android:background="@drawable/textviewborder"
            android:drawableStart="@drawable/ic_action_user"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textColorLink="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/signuplastName"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/signuplastName"
            app:layout_constraintTop_toBottomOf="@+id/signuplastName" android:drawableLeft="@drawable/ic_action_user"/>

    <EditText
            android:id="@+id/signupemailPrompt"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:background="@drawable/textviewborder"
            android:drawableStart="@drawable/ic_action_email"
            android:ems="10"
            android:hint="@string/reg_email"
            app:layout_constraintEnd_toEndOf="@+id/username"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/username"
            app:layout_constraintTop_toBottomOf="@+id/username" android:drawableLeft="@drawable/ic_action_email"
            android:inputType="textEmailAddress"/>

    <EditText
            android:id="@+id/signuppasswordPrompt"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:background="@drawable/textviewborder"
            android:drawableStart="@drawable/ic_action_password"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/signupemailPrompt"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/signupemailPrompt"
            app:layout_constraintTop_toBottomOf="@+id/signupemailPrompt"
            android:drawableLeft="@drawable/ic_action_password"/>

    <EditText
            android:id="@+id/signuppasswordConfirm"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:background="@drawable/textviewborder"
            android:drawableStart="@drawable/ic_action_password"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/signuppasswordPrompt"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/signuppasswordPrompt"
            app:layout_constraintTop_toBottomOf="@+id/signuppasswordPrompt"
            android:drawableLeft="@drawable/ic_action_password"/>

    <Button
            android:id="@+id/registrationButton"
            android:layout_width="219dp"
            android:layout_height="36dp"
            android:background="@drawable/loginbackground"
            android:text="@string/register"
            android:textColor="@color/textColor"
            android:textStyle="bold"
            android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/signuppasswordConfirm"
            app:layout_constraintStart_toStartOf="@+id/signuppasswordConfirm"
            app:layout_constraintEnd_toEndOf="@+id/signuppasswordConfirm" app:layout_constraintHorizontal_bias="0.0"/>


</android.support.constraint.ConstraintLayout>
